\Fix log container CSS mismatch (Autoscroll fix)\

--- a/src/web/templates/index.html
+++ b/src/web/templates/index.html
@@ -530,7 +530,7 @@
                                 style="cursor: pointer; transform: scale(1.2);">
                         </div>
                     </div>
-                    <div id="logs" class="log-container">
+                    <div id="logs" class="logs">
                         <!-- Logs populated by WS -->
                     </div>
                 </div>
