Exposed release year in Dashboard UI (History and Library)

--- a/src/web/templates/index.html
+++ b/src/web/templates/index.html
@@ -262,6 +262,7 @@
                                 <tr>
                                     <th>Title</th>
                                     <th>Artist</th>
+                                    <th>Year</th>
                                     <th>Genre</th>
                                     <th>Source(s)</th>
                                     <th>Added By</th>
@@ -289,6 +290,7 @@
                                 <tr>
                                     <th>Title</th>
                                     <th>Artist</th>
+                                    <th>Year</th>
                                     <th>Duration</th>
                                     <th>Genre</th>
                                     <th>Requested By</th>
